Fix : compress videos using FFmpeg (CLI) to reduce size.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             playsinline
             poster="img/poster-1.jpg"
           >
-            <source src="videos/Plastic CollectionVId.mp4" type="video/mp4" />
+            <source src="videos/plasticcollectionvid.mp4" type="video/mp4" />
           </video>
         </div>
         <!-- Panel 2 -->
@@ -74,7 +74,7 @@
             playsinline
             poster="img/poster-2.jpg"
           >
-            <source src="videos/3Dprinter.mp4" type="video/mp4" />
+            <source src="videos/3Dprinter-c.mp4" type="video/mp4" />
           </video>
         </div>
         <!-- Panel 3 -->
@@ -87,7 +87,7 @@
             playsinline
             poster="img/poster-3.jpg"
           >
-            <source src="videos/EduModel4.mp4" type="video/mp4" />
+            <source src="videos/edumodel.mp4" type="video/mp4" />
           </video>
         </div>
         <!-- Overlay -->
