WIP: creating core values and impact section

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive Website</title>
+    <title>About Us - EcoPrint</title>
     <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/a076d05399.js"
@@ -43,10 +43,372 @@
       </div>
     </nav>
 
-    <section class="about">
+    <section class="about-section">
+      <section class="about-container hero-50">
+        <div class="section-overlay"></div>
+        <div class="container-hero">
+          <h1>About Us</h1>
+          <p>Turning recycled materials into sustainable 3D innovations.</p>
+        </div>
+        <svg
+          viewBox="0 0 1962 178"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+        >
+          <path
+            fill="#ffffff"
+            d="M 0 114 C 118.5 114 118.5 167 237 167 L 237 167 L 237 0 L 0 0 Z"
+            stroke-width="0"
+          ></path>
+          <path
+            fill="#ffffff"
+            d="M 236 167 C 373 167 373 128 510 128 L 510 128 L 510 0 L 236 0 Z"
+            stroke-width="0"
+          ></path>
+          <path
+            fill="#ffffff"
+            d="M 509 128 C 607 128 607 153 705 153 L 705 153 L 705 0 L 509 0 Z"
+            stroke-width="0"
+          ></path>
+          <path
+            fill="#ffffff"
+            d="M 704 153 C 812 153 812 113 920 113 L 920 113 L 920 0 L 704 0 Z"
+            stroke-width="0"
+          ></path>
+          <path
+            fill="#ffffff"
+            d="M 919 113 C 1048.5 113 1048.5 148 1178 148 L 1178 148 L 1178 0 L 919 0 Z"
+            stroke-width="0"
+          ></path>
+          <path
+            fill="#ffffff"
+            d="M 1177 148 C 1359.5 148 1359.5 129 1542 129 L 1542 129 L 1542 0 L 1177 0 Z"
+            stroke-width="0"
+          ></path>
+          <path
+            fill="#ffffff"
+            d="M 1541 129 C 1751.5 129 1751.5 138 1962 138 L 1962 138 L 1962 0 L 1541 0 Z"
+            stroke-width="0"
+          ></path>
+        </svg>
+      </section>
 
-      <h1>About Section</h1>
+      <section class="about-info">About Info && History</section>
 
+      <section class="mision-vision">Mision and Vision</section>
+
+      <!-- Core values -->
+      <section class="core-values">
+        <div class="about-us section">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-4">
+                <div
+                  class="left-image wow fadeIn"
+                  data-wow-duration="1s"
+                  data-wow-delay="0.2s"
+                >
+                  <img src="img/about-left-image.png" alt="person graphic" />
+                </div>
+              </div>
+              <div class="col-lg-8">
+                <section class="services">
+                  <!-- <div class="pq-meter" aria-hidden="true">
+                    <h2>Our Core Values</h2>
+                    <div class="pq-fill"></div>
+                  </div> -->
+                  <div class="service-card fadeIn">
+                    <div class="icon">
+                      <img src="img/sustainability.png" alt="sustainability" />
+                    </div>
+                    <div class="right-text">
+                      <h4>Sustainability</h4>
+                      <p>
+                        We turn waste into opportunity through eco-friendly 3D
+                        printing.
+                      </p>
+                    </div>
+                  </div>
+
+                  <div class="service-card fadeIn">
+                    <div class="icon">
+                      <img src="img/innovation.png" alt="Innovation" />
+                    </div>
+                    <div class="right-text">
+                      <h4>Innovation</h4>
+                      <p>
+                        We create smart, modern solutions that drive positive
+                        change.
+                      </p>
+                    </div>
+                  </div>
+
+                  <div class="service-card fadeIn">
+                    <div class="icon">
+                      <img src="img/education.png" alt="education" />
+                    </div>
+                    <div class="right-text">
+                      <h4>Education</h4>
+                      <p>
+                        We empower learners and creators through training and
+                        mentorship.
+                      </p>
+                    </div>
+                  </div>
+
+                  <div class="service-card fadeIn">
+                    <div class="icon">
+                      <img src="img/community.png" alt="community" />
+                    </div>
+                    <div class="right-text">
+                      <h4>Community</h4>
+                      <p>
+                        We collaborate to build a greener, more connected
+                        future.
+                      </p>
+                    </div>
+                  </div>
+                </section>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- ===================== PROCESS QUEST ===================== -->
+      <section class="process-quest section-pad" id="process">
+        <div class="container">
+          <!-- Header -->
+          <header class="pq-head">
+            <h2>Our Process</h2>
+            <div class="pq-meter" aria-hidden="true">
+              <div class="pq-fill"></div>
+            </div>
+            <div class="pq-ctrls">
+              <button class="pq-btn" data-dir="prev" aria-label="Previous step">
+                ‹
+              </button>
+              <button class="pq-btn" data-dir="next" aria-label="Next step">
+                ›
+              </button>
+            </div>
+          </header>
+
+          <div class="pq-viewport">
+            <!-- Decorative path under cards -->
+            <svg
+              class="pq-path"
+              viewBox="0 0 1200 220"
+              preserveAspectRatio="none"
+              aria-hidden="true"
+            >
+              <defs>
+                <linearGradient id="pqGrad" x1="0%" y1="0%" x2="100%" y2="0%">
+                  <stop offset="0%" stop-color="#168630" />
+                  <stop offset="100%" stop-color="#1f8837" />
+                </linearGradient>
+              </defs>
+              <path
+                class="pq-track"
+                d="M10,110 C180,10 320,210 480,110 S820,10 1190,110"
+                fill="none"
+              />
+              <path
+                class="pq-progress"
+                d="M10,110 C180,10 320,210 480,110 S820,10 1190,110"
+                fill="none"
+              />
+            </svg>
+
+            <!-- Cards -->
+            <ol class="pq-trackcards" aria-label="EcoPrint Generation Process">
+              <li class="pq-step">
+                <figure class="pq-card">
+                  <img
+                    src="img/collecting plastic.jpg"
+                    alt="Collecting plastic waste"
+                    loading="lazy"
+                  />
+                  <figcaption>
+                    <h3>Collect</h3>
+                    <p>
+                      Community clean-ups and buy-back partners gather plastic
+                      waste.
+                    </p>
+                    <span class="pq-badge">Level 1</span>
+                  </figcaption>
+                </figure>
+              </li>
+
+              <li class="pq-step">
+                <figure class="pq-card">
+                  <img
+                    src="img/sorting2.jpeg"
+                    alt="Sorting and cleaning"
+                    loading="lazy"
+                  />
+                  <figcaption>
+                    <h3>Sort & Clean</h3>
+                    <p>We sort by type and wash to quality standards.</p>
+                    <span class="pq-badge">Level 2</span>
+                  </figcaption>
+                </figure>
+              </li>
+
+              <li class="pq-step">
+                <figure class="pq-card">
+                  <img
+                    src="img/Sort and Clean.jpg"
+                    alt="Shredding plastic"
+                    loading="lazy"
+                  />
+                  <figcaption>
+                    <h3>Shred</h3>
+                    <p>Waste becomes uniform flakes for extrusion.</p>
+                    <span class="pq-badge">Level 3</span>
+                  </figcaption>
+                </figure>
+              </li>
+
+              <li class="pq-step">
+                <figure class="pq-card">
+                  <img
+                    src="img/extrusion.jpeg"
+                    alt="Extrusion to filament"
+                    loading="lazy"
+                  />
+                  <figcaption>
+                    <h3>Extrude</h3>
+                    <p>
+                      Precision temperature & puller control create filament.
+                    </p>
+                    <span class="pq-badge">Level 4</span>
+                  </figcaption>
+                </figure>
+              </li>
+
+              <li class="pq-step">
+                <figure class="pq-card">
+                  <img
+                    src="img/spool3.jpeg"
+                    alt="Spooling filament"
+                    loading="lazy"
+                  />
+                  <figcaption>
+                    <h3>Spool</h3>
+                    <p>Tolerances checked; filament is spooled & labeled.</p>
+                    <span class="pq-badge">Level 5</span>
+                  </figcaption>
+                </figure>
+              </li>
+
+              <li class="pq-step">
+                <figure class="pq-card">
+                  <img
+                    src="img/pellets.jpeg"
+                    alt="3D printing models"
+                    loading="lazy"
+                  />
+                  <figcaption>
+                    <h3>3D Print</h3>
+                    <p>We print durable STEM models for classrooms.</p>
+                    <span class="pq-badge">Level 6</span>
+                  </figcaption>
+                </figure>
+              </li>
+
+              <li class="pq-step">
+                <figure class="pq-card">
+                  <img
+                    src="img/edu.jpg"
+                    alt="STEM education models in use"
+                    loading="lazy"
+                  />
+                  <figcaption>
+                    <h3>STEM Models</h3>
+                    <p>Hands-on learning that sparks curiosity & skills.</p>
+                    <span class="pq-badge final">Completed</span>
+                  </figcaption>
+                </figure>
+              </li>
+            </ol>
+          </div>
+        </div>
+      </section>
+
+      <section id="portfolio" class="our-portfolio">
+        <div class="container">
+          <div class="section-heading">
+            <h2>Our <em>Impact</em></h2>
+          </div>
+
+          <div class="row portfolio-row">
+            <!-- SEO Analysis -->
+            <div class="col-lg-3 col-md-6">
+              <div class="portfolio-item">
+                <img src="img/sdg4.png" alt="SEO Analysis" />
+                <div class="hidden-content">
+                  <h4>Quality Education (SDG 4)</h4>
+                  <p>
+                    We create learning tools and STEM models for classrooms,
+                    expanding access to quality education.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Website Reporting -->
+            <div class="col-lg-3 col-md-6">
+              <div class="portfolio-item">
+                <img src="img/sdg8.png" alt="Website Reporting" />
+                <div class="hidden-content">
+                  <h4>Decent Work & Growth (SDG 8)</h4>
+                  <p>
+                    Local collection, processing, and manufacturing create jobs
+                    and sustainable livelihoods.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Performance Tests -->
+            <div class="col-lg-3 col-md-6">
+              <div class="portfolio-item">
+                <img src="img/sdg12.png" alt="Performance Tests" />
+                <div class="hidden-content">
+                  <h4>Responsible Consumption (SDG 12)</h4>
+                  <p>
+                    By turning plastic waste into products, we reduce waste and
+                    promote circular consumption.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="pl-section" id="partners">
+        <div class="pl-heading">
+          <h2>Our Supporters</h2>
+        </div>
+        <div class="support">
+          <div class="supporter-card">
+            <div class="supporter-logo">
+              <img src="img/ctg.png" alt="Partner 1" />
+            </div>
+          </div>
+          <div class="supporter-card">
+            <div class="supporter-logo">
+              <img src="img/Infitech logo.png" alt="Partner 2" />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="blogs">
+        <h1>Blogs</h1>
+      </section>
     </section>
 
     <footer class="creative-footer">
@@ -96,6 +458,6 @@
         <p>&copy; 2025 EcoPrint. All Rights Reserved.</p>
       </div>
     </footer>
-
+    <script src="script.js"></script>
   </body>
 </html>
