--- a/index.html
+++ b/index.html
@@ -855,11 +855,11 @@
       </div>
     </footer>
 
-    <script src="facts.js"></script>
+    <!-- <script src="facts.js"></script>
     <link rel="stylesheet" href="facts.css" />
 
     <script src="contact.js"></script>
-    <link rel="stylesheet" href="contact.css" />
+    <link rel="stylesheet" href="contact.css" /> -->
 
     <script src="script.js"></script>
   </body>
