feat: add videa and article section

--- a/about.html
+++ b/about.html
@@ -388,6 +388,328 @@
         </div>
       </section>
 
+      <!-- // Videos and Articles Section -->
+      <!-- Videos Section -->
+      <section class="video-section">
+        <div class="container">
+          <div class="section-header">
+            <h2>Videos</h2>
+            <p>Watch our most featured media interviews and stories.</p>
+          </div>
+
+          <div class="scroll-container">
+            <button class="scroll-btn left">&#10094;</button>
+
+            <ul class="video-grid">
+              <!-- Example Card 1 -->
+              <li class="video-card bg-blue">
+                <article>
+                  <div class="image-container">
+                    <img src="img/beachclean up.jpg" alt="NTV Interview" />
+                    <button class="about-play" type="button">
+                      <svg width="26" height="26" viewBox="0 0 24 24">
+                        <path d="M8 5v14l11-7-11-7z" fill="currentColor" />
+                      </svg>
+                    </button>
+                  </div>
+                  <div class="content">
+                    <header>
+                      <h4 class="tag">Video</h4>
+                      <h3>
+                        <a href=""
+                          >Watch how E3D Print Generation is shaping a
+                          sustainable future through 3D printing innovation and
+                          recycling.</a
+                        >
+                      </h3>
+                      <p class="meta">
+                        <small>May 7, 2023</small> | <small>NTV Kenya</small>
+                      </p>
+                    </header>
+                  </div>
+                </article>
+              </li>
+
+              <li class="video-card bg-red">
+                <article>
+                  <div class="image-container">
+                    <img src="img/beachclean up.jpg" alt="TV47 Pitch" />
+                    <button class="about-play" type="button">
+                      <svg width="26" height="26" viewBox="0 0 24 24">
+                        <path d="M8 5v14l11-7-11-7z" fill="currentColor" />
+                      </svg>
+                    </button>
+                  </div>
+                  <div class="content">
+                    <header>
+                      <h4 class="tag">Video</h4>
+                      <h3>
+                        <a href=""
+                          >Explore our video stories showcasing sustainable
+                          manufacturing and technological innovation in
+                          recycling.</a
+                        >
+                      </h3>
+                      <p class="meta">
+                        <small>Dec 11, 2022</small> | <small>TV47 Kenya</small>
+                      </p>
+                    </header>
+                  </div>
+                </article>
+              </li>
+
+              <li class="video-card bg-pink">
+                <article>
+                  <div class="image-container">
+                    <img
+                      src="img/collecting plastic.jpg"
+                      alt="Dominique Ernst"
+                    />
+                    <button class="about-play" type="button">
+                      <svg width="26" height="26" viewBox="0 0 24 24">
+                        <path d="M8 5v14l11-7-11-7z" fill="currentColor" />
+                      </svg>
+                    </button>
+                  </div>
+                  <div class="content">
+                    <header>
+                      <h4 class="tag">Video</h4>
+                      <h3>
+                        <a href=""
+                          >See how we empower communities to create value from
+                          recycled materials through 3D printing technology.</a
+                        >
+                      </h3>
+                      <p class="meta">
+                        <small>May 19, 2022</small> |
+                        <small>Dominique Ernst</small>
+                      </p>
+                    </header>
+                  </div>
+                </article>
+              </li>
+
+              <li class="video-card bg-pink">
+                <article>
+                  <div class="image-container">
+                    <img
+                      src="img/collecting plastic.jpg"
+                      alt="Dominique Ernst"
+                    />
+                    <button class="about-play" type="button">
+                      <svg width="26" height="26" viewBox="0 0 24 24">
+                        <path d="M8 5v14l11-7-11-7z" fill="currentColor" />
+                      </svg>
+                    </button>
+                  </div>
+                  <div class="content">
+                    <header>
+                      <h4 class="tag">Video</h4>
+                      <h3>
+                        <a href=""
+                          >See how we empower communities to create value from
+                          recycled materials through 3D printing technology.</a
+                        >
+                      </h3>
+                      <p class="meta">
+                        <small>May 19, 2022</small> |
+                        <small>Dominique Ernst</small>
+                      </p>
+                    </header>
+                  </div>
+                </article>
+              </li>
+
+              <li class="video-card bg-pink">
+                <article>
+                  <div class="image-container">
+                    <img
+                      src="img/collecting plastic.jpg"
+                      alt="Dominique Ernst"
+                    />
+                    <button class="about-play" type="button">
+                      <svg width="26" height="26" viewBox="0 0 24 24">
+                        <path d="M8 5v14l11-7-11-7z" fill="currentColor" />
+                      </svg>
+                    </button>
+                  </div>
+                  <div class="content">
+                    <header>
+                      <h4 class="tag">Video</h4>
+                      <h3>
+                        <a href=""
+                          >See how we empower communities to create value from
+                          recycled materials through 3D printing technology.</a
+                        >
+                      </h3>
+                      <p class="meta">
+                        <small>May 19, 2022</small> |
+                        <small>Dominique Ernst</small>
+                      </p>
+                    </header>
+                  </div>
+                </article>
+              </li>
+            </ul>
+
+            <button class="scroll-btn right">&#10095;</button>
+          </div>
+        </div>
+      </section>
+
+      <!-- Articles Section -->
+      <section class="video-section">
+        <div class="container">
+          <div class="section-header">
+            <h2>Articles</h2>
+            <p>Read our latest stories and press features.</p>
+          </div>
+
+          <div class="scroll-container">
+            <button class="scroll-btn left">&#10094;</button>
+            <ul class="video-grid">
+              <li class="video-card bg-blue">
+                <article>
+                  <div class="content">
+                    <header>
+                      <h4 class="tag">Article</h4>
+                      <h3>
+                        <a href=""
+                          >Shaping the Future of 3D Printing with Recycled
+                          Materials</a
+                        >
+                      </h3>
+                      <p class="meta">
+                        <small>Jan 7, 2020</small> |
+                        <small>Daily Nation</small> |
+                        <small>By Margaret Maina</small>
+                      </p>
+                    </header>
+                    <main>
+                      <p>
+                        E3D Print Generation is a sustainable 3D printing
+                        company focused on converting recycled materials into
+                        useful, eco-friendly products. The firm combines
+                        creativity and innovation to offer cost-effective
+                        small-scale manufacturing, prototyping, and educational
+                        programs. Its mission is to promote environmental
+                        sustainability through technology by reducing plastic
+                        waste and empowering communities to create value from
+                        recycled materials.
+                      </p>
+                    </main>
+                  </div>
+                </article>
+              </li>
+
+              <li class="video-card bg-red">
+                <article>
+                  <div class="content">
+                    <header>
+                      <h4 class="tag">Article</h4>
+                      <h3>
+                        <a href=""
+                          >Shaping the Future of 3D Printing with Recycled
+                          Materials</a
+                        >
+                      </h3>
+                      <p class="meta">
+                        <small>Jan 7, 2020</small> |
+                        <small>Daily Nation</small> |
+                        <small>By Margaret Maina</small>
+                      </p>
+                    </header>
+                    <main>
+                      <p>
+                        E3D Print Generation is a sustainable 3D printing
+                        company focused on converting recycled materials into
+                        useful, eco-friendly products. The firm combines
+                        creativity and innovation to offer cost-effective
+                        small-scale manufacturing, prototyping, and educational
+                        programs. Its mission is to promote environmental
+                        sustainability through technology by reducing plastic
+                        waste and empowering communities to create value from
+                        recycled materials.
+                      </p>
+                    </main>
+                  </div>
+                </article>
+              </li>
+
+              <li class="video-card bg-pink">
+                <article>
+                  <div class="content">
+                    <header>
+                      <h4 class="tag">Article</h4>
+                      <h3>
+                        <a href=""
+                          >Shaping the Future of 3D Printing with Recycled
+                          Materials</a
+                        >
+                      </h3>
+                      <p class="meta">
+                        <small>Jan 7, 2020</small> |
+                        <small>Daily Nation</small> |
+                        <small>By Margaret Maina</small>
+                      </p>
+                    </header>
+                    <main>
+                      <p>
+                        E3D Print Generation is a sustainable 3D printing
+                        company focused on converting recycled materials into
+                        useful, eco-friendly products. The firm combines
+                        creativity and innovation to offer cost-effective
+                        small-scale manufacturing, prototyping, and educational
+                        programs. Its mission is to promote environmental
+                        sustainability through technology by reducing plastic
+                        waste and empowering communities to create value from
+                        recycled materials.
+                      </p>
+                    </main>
+                  </div>
+                </article>
+              </li>
+
+              <li class="video-card bg-pink">
+                <article>
+                  <div class="content">
+                    <header>
+                      <h4 class="tag">Article</h4>
+                      <h3>
+                        <a href=""
+                          >Shaping the Future of 3D Printing with Recycled
+                          Materials</a
+                        >
+                      </h3>
+                      <p class="meta">
+                        <small>Jan 7, 2020</small> |
+                        <small>Daily Nation</small> |
+                        <small>By Margaret Maina</small>
+                      </p>
+                    </header>
+                    <main>
+                      <p>
+                        E3D Print Generation is a sustainable 3D printing
+                        company focused on converting recycled materials into
+                        useful, eco-friendly products. The firm combines
+                        creativity and innovation to offer cost-effective
+                        small-scale manufacturing, prototyping, and educational
+                        programs. Its mission is to promote environmental
+                        sustainability through technology by reducing plastic
+                        waste and empowering communities to create value from
+                        recycled materials.
+                      </p>
+                    </main>
+                  </div>
+                </article>
+              </li>
+            </ul>
+
+            <button class="scroll-btn right">&#10095;</button>
+          </div>
+        </div>
+      </section>
+
       <section class="pl-section" id="partners">
         <div class="pl-heading">
           <h2>Our Supporters</h2>
