--- a/about.html
+++ b/about.html
@@ -710,6 +710,61 @@
         </div>
       </section>
 
+      <section class="our-team">
+        <div class="responsive-container-block outer-container">
+          <div class="responsive-container-block inner-container">
+            <p class="text-blk section-head-text">Meet Our Team</p>
+            <div class="responsive-container-block">
+              <div class="responsive-cell-block team-card-container">
+                <div class="team-card">
+                  <div class="img-wrapper">
+                    <img class="team-img" src="img/Ecoprint Logo 3.png" />
+                  </div>
+                  <p class="text-blk name">Eco Print</p>
+                  <p class="text-blk position">CEO</p>
+                </div>
+              </div>
+              <div class="responsive-cell-block team-card-container">
+                <div class="team-card">
+                  <div class="img-wrapper">
+                    <img class="team-img" src="img/beauty2.jpeg" />
+                  </div>
+                  <p class="text-blk name">Eco Print</p>
+                  <p class="text-blk position">Member</p>
+                </div>
+              </div>
+              <div class="responsive-cell-block team-card-container">
+                <div class="team-card">
+                  <div class="img-wrapper">
+                    <img class="team-img" src="img/collecting plastic.jpg" />
+                  </div>
+                  <p class="text-blk name">Eco Print</p>
+                  <p class="text-blk position">Member</p>
+                </div>
+              </div>
+              <div class="responsive-cell-block team-card-container">
+                <div class="team-card">
+                  <div class="img-wrapper">
+                    <img class="team-img" src="img/community.png" />
+                  </div>
+                  <p class="text-blk name">Eco Print</p>
+                  <p class="text-blk position">Member</p>
+                </div>
+              </div>
+              <div class="responsive-cell-block team-card-container">
+                <div class="team-card">
+                  <div class="img-wrapper">
+                    <img class="team-img" src="img/beachclean up.jpg" />
+                  </div>
+                  <p class="text-blk name">Eco Print</p>
+                  <p class="text-blk position">Instructor</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <section class="pl-section" id="partners">
         <div class="pl-heading">
           <h2>Our Supporters</h2>
